Layout change in ingredients view to include EINECS Fix molecular weight update in ingredients to be updated from pubchem Fix search in ingredients not showing results if contains white spaces

--- a/css/vault.css
+++ b/css/vault.css
@@ -725,3 +725,10 @@ table.fixedHeader-floating {
 .pv_vertical_middle {
 	vertical-align: middle !important;
 }
+
+.subHeaderCAS {
+	font-size: 1.2rem;
+	display: inline;
+	font-weight: bold;
+	color: #77716f !important
+}
